# AV

./: CMakeLists.txt  README.md  build_log.txt  build_log_utf8.txt
data/: hashdb.txt  whitelist.txt
gui/: app.js  index.html  style.css
src/: gui_main.cpp  main.cpp  watchdog_main.cpp
src/database/: hash_database.cpp  hash_database.h
src/gui/: gui_common.h  gui_draw.cpp  gui_draw.h
src/protection/: process_guard.cpp  process_guard.h  ransomware_shield.cpp  ransomware_shield.h
src/quarantine/: quarantine.cpp  quarantine.h
src/scanner/: file_walker.cpp  file_walker.h  hash_calculator.cpp  hash_calculator.h  pe_analyzer.cpp  pe_analyzer.h  scanner.cpp  scanner.h  signature_matcher.cpp  signature_matcher.h
src/utils/: logger.cpp  logger.h
tests/: test_hash_calculator.cpp  test_hash_database.cpp  test_scanner.cpp
